Fix dakenimg spacing

--- a/styles.css
+++ b/styles.css
@@ -52,10 +52,9 @@ a {
     width:300px;
     height: 400px;
     flex-grow: 1;
-    padding-left: 20rem;
+    padding-left: 60rem;
 }
 
 .headertext {
     width: 500px;
-    height: 600 px;
 }
